<?xml version="1.0" encoding="utf-8"?>
<resources>

    <string name="app_name">哎呦天气</string>
    <string name="guanyu">关于</string>
    <string name="settings">设置</string>
    <string name="tixing">提醒设置</string>
    <string name="beijing">主题设置</string>
    <string name="banben">版本更新</string>
    <string name="yijian">意见反馈</string>
    <string name="city_settings">城市</string>
    <string name="errcode_success">发送成功</string>
    <string name="errcode_cancel">发送取消</string>
    <string name="errcode_deny">发送被拒绝</string>
    <string name="errcode_unknown">发送返回</string>
    <string name="city_zixun">资讯列表</string>
    <string name="zixun">资讯内容</string>
    <string name="back">返回</string>
    <string name="noweixin">您没有安装微信，无法分享!</string>
    <string name="noweibo">您没有安装新浪微博，无法分享!</string>
    <string name="nowebnet"> 无网络，无法加载页面!</string>
    <string name="nonet"> 无网络，无法获取数据!</string>
    <string name="linknet"> 连接网络，可更新数据!</string>
    <string name="linknets"> 请连接网络!</string>
    <string name="update"> 更新</string>
    <string name="sure"> 您确定更新微天气吗?</string>
    <string name="ok">确定</string>
    <string name="no">取消</string>
    <string name="font">黑体</string>
    <string name="xianshi">在通知栏显示</string>
     <string name="jiudian">每天九点通知</string>
    <string name="shengyin">声音</string>
    <string name="yxianshi">通知栏已显示</string>
    <string name="bxianshi">通知栏不显示</string>
    <string name="zuixin">已是最新版本！</string>
    <string name="share">分享到</string>
    <string name="circle">朋友圈</string>
    <string name="friend">微信</string>
    <string name="weibo">微博</string>
    <string name="jingxi">左滑有惊喜！</string>

    <string-array name="coloritem">
        <item>绿</item>
        <item>红</item>
        <item>蓝</item>
        <item>紫</item>
    </string-array>
    <string-array name="cityitem">
        <item>嘉善</item>
        <item>平湖</item>
        <item>嘉兴</item>
        <item>桐乡</item>
        <item>海盐</item>
        <item>海宁</item>
    </string-array>
    <string-array name="weekitem">
        <item>星期日</item>
        <item>星期一</item>
        <item>星期二</item>
        <item>星期三</item>
        <item>星期四</item>
        <item>星期五</item>
        <item>星期六</item>
    </string-array>

</resources>