<?xml version="1.0" encoding="utf-8"?>
<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
    android:id="@+id/pop_layout"
    android:layout_width="wrap_content"
    android:layout_height="wrap_content"
    android:layout_alignParentBottom="true"
    android:gravity="center_horizontal"
    android:orientation="vertical" >

    <RelativeLayout
        android:id="@+id/xianshi"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_margin="15dip" >

        <TextView
            android:id="@+id/xianshi_text"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_alignParentLeft="true"
            android:text="@string/xianshi"
            android:textColor="@color/white"
            android:textSize="20sp" />

        <ImageView
            android:id="@+id/xianshi_img"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_alignParentRight="true" />
    </RelativeLayout>


    <RelativeLayout
        android:id="@+id/jiudian"
        android:layout_width="match_parent"
        android:layout_height="wrap_content" 
        android:layout_margin="15dip">

        <TextView
            android:id="@+id/jiudian_text"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_alignParentLeft="true"
            android:text="@string/jiudian"
            android:textColor="@color/white"
            android:textSize="20sp" />

        <ImageView
            android:id="@+id/jiudian_img"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_alignParentRight="true"
            android:src="@drawable/checked" />
    </RelativeLayout>


    <TextView
        android:id="@+id/cancel"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_margin="8dip"
        android:text="@string/no"
        android:textColor="@color/white"
        android:textSize="20sp" />

</LinearLayout>